Fix speed slider z-index

--- a/gameOfLife/style.css
+++ b/gameOfLife/style.css
@@ -165,6 +165,7 @@ canvas {
 .config-list {
   border-radius: 15px 0px 0px 15px;
   height: 500px;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   background-color: var(--main-color);
@@ -455,6 +456,7 @@ input:checked + .slider:before {
 }
 
 #range-speed {
+  z-index: 0;
   left: auto;
   width: 300px;
   margin: 0;
